# asmy

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
asmy/: assembler.py  chip8.py  gmc4.py  lmc.py  mos6502.py  sweet16.py
examples/: chip8_loop.py
test/: test_assembler.py  test_chip8.py  test_gmc4.py  test_lmc.py  test_mos6502.py  test_sweet16.py
