[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asmy"
version = "0.1.2"
authors = [
  { name="Serge Zaitsev", email="hello@zserge.com" },
]
description = "Python-based multi-architecture assembler"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Assemblers",
]
